--- a/Login_Sign Up/html/Login.html
+++ b/Login_Sign Up/html/Login.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Diseño de Login</title>
 </head>
 <body>
-    <script src="../js/Login"></script>
+    <section>
+        <h2>Login</h2>
+        <form id="loginForm">
+            <label>Mail</label>
+            <input type="email" placeholder="..." id="email" required autofocus>
+            <label>Contraseña</label>
+            <input type="password" placeholder="..." id="password" required>
+            <input type="submit" value="Ingresar">
+        </form>
+        <p>No tienes una cuenta? <a href="../html/Sign Up.html">Registro</a></p>
+    </section>
+    <script src="../js/Login.js"></script>
 </body>
 </html>
