Cambios Login y Sign Up
Se han realizado cambios en todos los archivos y se a agregado archivo Validation.js que contiene funciones para validar datos

--- a/Login_Sign Up/html/Sign Up.html
+++ b/Login_Sign Up/html/Sign Up.html
@@ -18,9 +18,11 @@
             <label>Contraseña</label>
             <input type="password" placeholder="..." id="password" required>
             <input type="submit" value="Registro">
+            <!-- <button type="submit">Registrarse</button> -->
         </form>
+        <div id="signupError" class="error-message"></div>
         <p>Ya tienes una cuenta? <a href="../html/Login.html">Login</a></p>
     </section>
-    <script src="../js/Sign_Up.js"></script>
+    <script src="../js/Sign_Up.js" type="module"></script>
 </body>
 </html>
