--- a/Login_Sign Up/html/Login.html
+++ b/Login_Sign Up/html/Login.html
@@ -11,14 +11,15 @@
     <section>
         <h2>Login</h2>
         <form id="loginForm">
-            <label>Mail</label>
-            <input type="email" placeholder="..." id="email" required autofocus>
+            <label>Usuario</label>
+            <input type="text" placeholder="Ingrese su usuario" id="name" required autofocus>
             <label>Contraseña</label>
-            <input type="password" placeholder="..." id="password" required>
+            <input type="password" placeholder="Ingrese su contraseña" id="password" required>
             <input type="submit" value="Ingresar">
         </form>
+        <div id="loginError" class="error-message"></div>
         <p>No tienes una cuenta? <a href="../html/Sign Up.html">Registro</a></p>
     </section>
-    <script src="../js/Login.js"></script>
+    <script src="../js/Login.js" type="module"></script>
 </body>
 </html>
