--- a/Login_Sign Up/index.html
+++ b/Login_Sign Up/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Prueba de Login y Sign Up</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Home</title>
 </head>
 <body>
     <section>
         <h1>Home</h1>
         <button id="logout">Logout</button>
     </section>
-    <script src="./js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
 </body>
 </html>
