Conciliacion de codigo del blog

--- a/Login_Sign Up/index.html
+++ b/Login_Sign Up/index.html
@@ -12,6 +12,8 @@
         <h1>Home</h1>
         <button id="logout">Logout</button>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.2.0/uuid.min.js" integrity="sha512-X0CJvcClD8EXFn5Oq8BD5lIsznKDfxb0Sf9Wr8MCCTyAEWaAAxr0Jvm3qyofsmN7eSHMZ0PPQGjVKroLAfexrA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="js/index.js" type="module"></script>
 </body>
 </html>
