--- a/Login_Sign Up/html/Sign Up.html
+++ b/Login_Sign Up/html/Sign Up.html
@@ -23,6 +23,8 @@
         <div id="signupError" class="error-message"></div>
         <p>Ya tienes una cuenta? <a href="../html/Login.html">Login</a></p>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.2.0/uuid.min.js" integrity="sha512-X0CJvcClD8EXFn5Oq8BD5lIsznKDfxb0Sf9Wr8MCCTyAEWaAAxr0Jvm3qyofsmN7eSHMZ0PPQGjVKroLAfexrA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="../js/Sign_Up.js" type="module"></script>
 </body>
 </html>
