--- a/html/Login.html
+++ b/html/Login.html
@@ -4,22 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/styles_login_sign-up.css">
     <title>Diseño de Login</title>
 </head>
 <body>
-    <script src="../js/Login.js" type="module"></script>
+    <header>
+        <div class="header-content">
+            <div class="logo">
+                <h1><i class="ri-code-box-fill"></i>Code<b>Nexus</b></h1>
+            </div>
+            <div id="show-menu" class="menu">
+                <nav>
+                    <ul>
+                        <li><i class="fas fa-home"></i><a href="../home.html"> Home</a></li>
+                        <li><i class="fas fa-headset"></i><a href="#footer"> Contact</a></li>
+                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="/html/Sign Up.html" class="text-login"> Sign Up</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div id="icon-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </header>
     <section>
-        <h2>Login</h2>
+        <h2>Sign in</h2>
         <form id="loginForm">
-            <label>Usuario</label>
-            <input type="text" placeholder="Ingrese su usuario" id="name" required autofocus>
-            <label>Contraseña</label>
-            <input type="password" placeholder="Ingrese su contraseña" id="password" required>
-            <input type="submit" value="Ingresar">
+            <label>User</label>
+            <input type="text" placeholder="User" id="name" required autofocus>
+            <label>Password</label>
+            <input type="password" placeholder="Password" id="password" required>
+            <input type="submit" value="Sign in">
         </form>
         <div id="loginError" class="error-message"></div>
-        <p>No tienes una cuenta? <a href="../html/Sign Up.html">Registro</a></p>
+        <p>You do not have an account? <a href="../html/Sign Up.html">Sign up</a></p>
     </section>
+    <div class="container-all" id="move-content">
+        <!--Inicio de estructura para pie de pagina-->
+        <div class="container-footer" id="footer">	  
+            <footer>
+                <div class="logo-footer">
+                    <h1><i class="ri-code-box-fill"></i>Code<b>Nexus</b></h1>
+                </div>
+                <div class="redes-footer">
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-f icon-redes-footer"></i></a>
+                    <a href="https://github.com/ShinesparkSR388/CodeNexus.git"><i class="fa-brands fa-github icon-redes-footer"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram icon-redes-footer"></i></a>
+                </div>
+                <hr>
+                <h4>© 2023 CodeNexus - All rights reserved</h4>
+            </footer>  
+        </div>
+        <!--Fin de estructura para pie de pagina-->
+    </div>
+    <script src="../js/login_sign_up/Login.js" type="module"></script>
 </body>
 </html>
