Conciliacion de codigo del inicio o  'Home' y las funcionalidades basicas de posts y comentarios, entre otros.

--- a/html/Sign Up.html
+++ b/html/Sign Up.html
@@ -42,7 +42,7 @@
             <input type="submit" value="Sign Up">
             <!-- <button type="submit">Registrarse</button> -->
         </form>
-        <div id="signupError" class="error-message"></div>
+        <div id="loginError" class="error-message"></div>
         <p>Do you already have an account? <a href="./Login.html">Sign in</a></p>
     </section>
     <div class="container-all" id="move-content">
