--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -11,13 +11,13 @@
     <div class="toolbar">
         <div class="row flex-container flex-align-center margin-left-2 margin-right-2">
             <div class="col-1 flex-container flex-justify-left">
-                <a href="home_feed.html" >Logo</a>
+                <a href="home_feed.html" ><img src="../src/logo.png" alt="" class="margin-0 padding-0" style="width: 70px;"></a>
             </div>
             <div class="col-9 flex-container flex-justify-right">
                 <a href="home_feed.html">Inicio</a>
                 <a href="write_post.html">Redactar</a>
                 <a href="admin.html" class="active">Perfil</a>
-                <a href="admin.html">Ajustes</a>
+                <a href="settings.html">Administrar</a>
             </div>
         </div>
     </div>
