--- a/html/admin/home_feed.html
+++ b/html/admin/home_feed.html
@@ -18,6 +18,7 @@
                 <a href="write_post.html">Redactar</a>
                 <a href="admin.html">Perfil</a>
                 <a href="settings.html">Administrar</a>
+                <a logout>Cerrar Sesion</a>
             </div>
         </div>
     </div>
