--- a/html/user/home_feed.html
+++ b/html/user/home_feed.html
@@ -15,7 +15,8 @@
             </div>
             <div class="col-9 flex-container flex-justify-right">
                 <a href="home_feed.html" class="active">Inicio</a>
-                <a href="profile.html">Perfil</a>
+                <a href="user.html">Perfil</a>
+                <a logout>Cerrar Sesion</a>
             </div>
         </div>
     </div>
