--- a/html/admin/settings.html
+++ b/html/admin/settings.html
@@ -18,13 +18,14 @@
                 <a href="write_post.html">Redactar</a>
                 <a href="admin.html">Perfil</a>
                 <a href="settings.html" class="active">Administrar</a>
+                <a logout>Cerrar Sesion</a>
             </div>
         </div>
     </div>
     <div class="row margin-top-4">
         <div class="col-1"></div>
         <div class="col-8">
-            <div class="row border rounded-1 bg-color-1">
+            <div class="row border rounded-1 bg-color-4">
                 <div class="col-1 bg-color-2 rounded-TopLeft-1 rounded-BottomLeft-1 flex-container flex-justify-center" users_>
                     <h4 class=" margin-1">Usuarios</h4>
                 </div>
@@ -35,7 +36,7 @@
                     <h4 class=" margin-1">Bloqueos</h4>
                 </div>
             </div>
-            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-1" admin-users>
+            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-4" admin-users>
                 <div class="col">
                     <p> parte para administrar los datos de la lista 'usuarios' y la lista 'blocked' en localStorage con la siguiente estructura: <br>
                         email: "" <br>
@@ -47,7 +48,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-1" admin-posts>
+            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-4" admin-posts>
                 <div class="col">
                     <p> parte para administrar los datos de la lista 'posts' en localStorage con la siguiente estructura: <br>
                         content: "" <br>
@@ -59,7 +60,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-1" admin-blocked>
+            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-4" admin-blocked>
                 <div class="col">
                     <p> parte para agregar y eliminar usuarios de una lista 'blocked' en localStorage  con la siguiente estructura: <br>
                         email: "" <br>
