--- a/html/admin/settings.html
+++ b/html/admin/settings.html
@@ -114,24 +114,48 @@
                     </div>
                 </div>
             </div>
-            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-4" admin-blocked>
+            <div class="row border margin-top-1 rounded-1 padding-2 padding-top-1 padding-bottom-1 bg-color-1" admin-blocked>
                 <div class="col">
-                    <p> parte para agregar y eliminar usuarios de una lista 'blocked' en localStorage  con la siguiente estructura: <br>
-                        email: "" <br>
-                        id: "" <br>
-                        password: "" <br>
-                        type: "" <br>
-                        username: "" <br>
-                        En otras palabras se trasladara todo el usuario como tal de la lista 'usuarios' a la lista 'blocked'
-                    </p>
+                    <h3>Bloquear usuarios</h3>
+                    <div class="tabla-container">
+                        <table id="tabla1" class="tabla">
+                        <thead>
+                            <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Filas de usuarios se agregarán dinámicamente aquí -->
+                        </tbody>
+                        </table>
+                    </div>
+                    <h3>Desbloquear de usuarios</h3>
+                    <div class="tabla-container">
+                        <table id="tabla2" class="tabla">
+                        <thead>
+                            <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Filas de usuarios se agregarán dinámicamente aquí -->
+                        </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.2.0/uuid.min.js" integrity="sha512-X0CJvcClD8EXFn5Oq8BD5lIsznKDfxb0Sf9Wr8MCCTyAEWaAAxr0Jvm3qyofsmN7eSHMZ0PPQGjVKroLAfexrA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="../../js/admin/settings.js" type="module"></script>
     <script src="../../js/admin/crud.js" type="module"></script>
+    <script src="../../js/admin/datos.js"></script>
 </body>
 </html>
