Solucion de algunos orrores de direccionamiento

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                         <li><i class="fas fa-home"></i><a href="#home"> Home</a></li>
                         <li><i class="fas fa-file-alt"></i><a href="#About blog"> About Blog</a></li>
                         <li><i class="fas fa-headset"></i><a href="#footer"> Contact</a></li>
-                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="/html/Login.html" class="text-login"> Sign in</a></li>
+                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="./html/Login.html" class="text-login"> Sign in</a></li>
                     </ul>
                 </nav>
             </div>
@@ -40,7 +40,7 @@
             <div class="container-info-cover">
                 <h1>¡Welcome to CodeNexus!</h1>
                 <p id="About blog">CodeNexus is a meeting point for developers and connections in the development community. If you want to be part of the community, click the sign up button.</p>
-                <a href="/html/Sign Up.html">Sign up</a>
+                <a href="./html/SignUp.html">Sign up</a>
             </div>
         </div>
         <!--Fin de estructura para la portada-->
