--- a/html/Login.html
+++ b/html/Login.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><i class="fas fa-home"></i><a href="../home.html"> Home</a></li>
                         <li><i class="fas fa-headset"></i><a href="#footer"> Contact</a></li>
-                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="/html/Sign Up.html" class="text-login"> Sign Up</a></li>
+                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="./SignUp.html" class="text-login"> Sign Up</a></li>
                     </ul>
                 </nav>
             </div>
@@ -40,7 +40,7 @@
             <input type="submit" value="Sign in">
         </form>
         <div id="loginError" class="error-message"></div>
-        <p>You do not have an account? <a href="../html/Sign Up.html">Sign up</a></p>
+        <p>You do not have an account? <a href="./SignUp.html">Sign up</a></p>
     </section>
     <div class="container-all" id="move-content">
         <!--Inicio de estructura para pie de pagina-->
