--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><i class="fas fa-home"></i><a href="../home.html"> Home</a></li>
                         <li><i class="fas fa-headset"></i><a href="#footer"> Contact</a></li>
-                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="/html/Login.html" class="text-login"> Sign in</a></li>
+                        <li class="elemento-login"><i class="ri-user-fill"></i><a href="./Login.html" class="text-login"> Sign in</a></li>
                     </ul>
                 </nav>
             </div>
