--- a/html/admin/settings.html
+++ b/html/admin/settings.html
@@ -156,6 +156,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="../../js/admin/settings.js" type="module"></script>
     <script src="../../js/admin/crud.js" type="module"></script>
-    <script src="../../js/admin/datos.js"></script>
+    <script src="../../js/admin/datos.js" type="module"></script>
 </body>
 </html>
