--- a/home.html
+++ b/home.html
@@ -103,6 +103,6 @@
         </div>
         <!--Fin de estructura para pie de pagina-->
     </div>
-    <script src="js/home.js"></script> 
+    <script src="./js/home.js"></script> 
 </body>
 </html>
