Imagenes en posts y otros detalles

--- a/html/admin/home_feed.html
+++ b/html/admin/home_feed.html
@@ -44,9 +44,9 @@
         </div>
     </div>
     <div class="row margin-top-4">
-        <div class="col-1"></div>
-        <div class="col-6 margin-right-2 ">
-            <div class="form-title rounded-2 opacity-8 margin-left-2 ">
+        <div class="col-2"></div>
+        <div class="col-6">
+            <div class="form-title rounded-2 opacity-8">
                 <h2>News</h2>
             </div>
             
