--- a/html/admin/settings.html
+++ b/html/admin/settings.html
@@ -117,11 +117,11 @@
                                     <h3>Edit Post</h3>
                                 </div>
                                 <div class="form-1">
-                                    <input type="text" style="display: none;" id-post>
+                                    <input type="text" style="display: none;" class="color-4 bg-color-1" id-post>
                                     <label for="title">Title of the publication</label>
-                                    <input type="text" title-post>
+                                    <input class="color-4 bg-color-1" type="text" title-post>
                                     <label for="content">Content</label>
-                                    <textarea rows="1" cols="1" class="input-3" content-post></textarea>
+                                    <textarea class="color-4 bg-color-1" rows="1" cols="1" class="input-3" content-post></textarea>
                                     <button button-save>Save</button></div>
                             </form>
                             <div class="row flex-container flex-justify-left flex-align-down margin-left-1" style="height: 30%;">
