--- a/html/admin/write_post.html
+++ b/html/admin/write_post.html
@@ -51,9 +51,11 @@
                 </div>
                 <div class="form-1">
                     <label for="title">Title of the publication</label>
-                    <input type="text" title-post>
+                    <input class="color-4 bg-color-1" type="text" title-post>
+                    <label for="content">Image of the post</label>
+                    <input type="file" class="color-4 bg-color-1 text-4" img-post>
                     <label for="content">Content</label>
-                    <textarea rows="1" cols="1" class="input-3" content-post></textarea>
+                    <textarea rows="1" cols="1" class="input-3 color-4 bg-color-1" content-post></textarea>
                     <button button-submit>Send</button>
                 </div>
             </form>
