--- a/html/user/user.html
+++ b/html/user/user.html
@@ -62,7 +62,7 @@
                         <div class="col-8 padding-left-2">
                             <h3 title-about>About me</h3>
                             <p information></p>
-                            <textarea name="" id="" cols="30" rows="10" class="" style="width: 80%; height: 70%; display: none;" edit-content></textarea>
+                            <textarea name="" id="" cols="30" rows="10" class="bg-color-1 color-4" style="width: 80%; height: 70%; display: none;" edit-content></textarea>
                             <button edit style="background-color: blue;">Edit</button>
                             <button save-about style="display: none; background-color: green;">Save</button>
                         </div>
