--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -68,7 +68,7 @@
                         <div class="col-7 padding-left-1">
                             <h3 title-about>About me</h3>
                             <p information></p>
-                            <textarea name="" id="" cols="30" rows="10" class="" style="width: 80%; height: 70%; display: none;" edit-content></textarea>
+                            <textarea name="" id="" cols="30" rows="10" class="color-4 bg-color-1" style="width: 80%; height: 70%; display: none;" edit-content></textarea>
                             <button edit style="background-color: blue;">Edit</button>
                             <button save-about style="display: none; background-color: green;">Save</button>
                         </div>
